fixed the spacing

--- a/src/_components/pages/Home/Home.module.css
+++ b/src/_components/pages/Home/Home.module.css
@@ -135,7 +135,7 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
-    margin: 0 0 50px 0;
+    margin: 60px 0 50px 0;
 }
 
 .main_third_container_content_heading {
